--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,11 @@ nav i.material-icons{
 }
 
 /*------ MEDIA -------*/
+@media only screen and (max-width: 480px){
+    .home {
+        background-position: -200px;
+    }
+}
 
 @media only screen and (min-width: 480px){
     .banner p {padding-top: 200px;}
